--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: 14.20.0
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --ignore-scripts
 
       - name: Check microservice typescript
         run: npm run ts:check
@@ -125,11 +125,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
-      - uses: actions/download-artifact@master
-        with:
-          name: coverage-lcov
-          path: coverage
 
       - name: Get npm package version
         id: package-version
