--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     concurrency:
-      group: ${{ github.ref }}-sonarcube
+      group: ${{ github.ref }}-build
       cancel-in-progress: true
 
     steps:
@@ -50,7 +50,7 @@ jobs:
     needs: [build]
     runs-on: ubuntu-latest
     concurrency:
-      group: ${{ github.ref }}-sonarcube
+      group: ${{ github.ref }}-build-docker
       cancel-in-progress: true
 
     steps:
@@ -97,7 +97,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-docker]
     concurrency:
-      group: ${{ github.ref }}-sonarcube
+      group: ${{ github.ref }}-release
       cancel-in-progress: true
 
     steps:
@@ -109,6 +109,9 @@ jobs:
       - uses: actions/download-artifact@master
         with:
           name: artifacts
+
+      - name: Install dependencies
+        run: npm ci --ignore-scripts
 
       - name: Release
         env:
