--- a/package.json
+++ b/package.json
@@ -68,6 +68,6 @@
 		"semantic-release": "^19.0.5",
 		"ts-node": "10.9.1",
 		"tsconfig-paths": "^4.1.0",
-		"typescript": "^4.7.4"
+		"typescript": "4.7.4"
 	}
 }
