--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,6 +106,11 @@ jobs:
 
       - run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.13.0
+
       - uses: actions/download-artifact@master
         with:
           name: artifacts
